--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -1,11 +1,11 @@
 name: ci/cd to dev(sail)
 on:
   push:
-    branches:
-      - dev
+    branches: [ "dev" ]
 
 jobs:
   ci:
+    environment: dev
     outputs:
       docker-tag: ${{ steps.prepare.outputs.docker-tag }}
       target-cluster: ${{ steps.prepare.outputs.target-cluster }}
@@ -20,11 +20,16 @@ jobs:
         run: |
           echo "docker-tag=dev-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_OUTPUT
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          username: ${{ secrets.DOCKERHUB_ACCESS_TOKEN_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN_SECRET }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -37,7 +42,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           push: true
-          tags: kromanetwork/prover-proxy:${{ steps.prepare.outputs.docker-tag }},kromanetwork/prover-proxy:latest
+          tags: 814420593069.dkr.ecr.ap-northeast-2.amazonaws.com/prover-proxy:${{ steps.prepare.outputs.docker-tag }},814420593069.dkr.ecr.ap-northeast-2.amazonaws.com/prover-proxy:latest
           platforms: linux/amd64,linux/arm64
 
   cd:
@@ -71,3 +76,33 @@ jobs:
             git commit -am "https://github.com/${{ github.repository }}/commit/${GITHUB_SHA}" && git push
           fi
         shell: bash
+
+  cd-proxy-l2:
+    needs: ci
+    runs-on: [self-hosted, ip-10-0-0-77] # proxy-l2
+    steps:
+      - name: Change latest Image Tag
+        run: |
+          cd devops-prover-up
+          docker compose pull
+          docker compose --profile prover-proxy up -d
+
+  cd-proxy-qa-1:
+    needs: ci
+    runs-on: [self-hosted, ip-10-0-0-16] # proxy-qa-1
+    steps:
+      - name: Change latest Image Tag
+        run: |
+          cd devops-prover-up
+          docker compose pull
+          docker compose --profile prover-proxy up -d
+
+  cd-proxy-qa-2:
+    needs: ci
+    runs-on: [self-hosted, ip-10-0-0-183] # proxy-qa-2
+    steps:
+      - name: Change latest Image Tag
+        run: |
+          cd devops-prover-up
+          docker compose pull
+          docker compose --profile prover-proxy up -d
